--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+09.08.2004
+- #ifdef BUILD_WITH_NEW_LOUDMOUTH
+        lm_connection_set_jid(jabber_data.connection, jid);
+  #endif
+	
+
 05.08.2004
 - fixed warning messages with g_strchomp() (GUI/krzak)
 - visible warning if there is no jid in configuration (Jabber/krzak)
