--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+18.08.2004
+- building plugins and other features is enabled now by default (not all)
+  but you can disable it with --without-foo, in addition is some library
+  will be not found - configure will stop with error message instead just
+  disable feature. 
+- fixed segfault with gadu-gadu disconnect/reconnect (krzak/gadu-gadu)
+- small fixes in jabber plugin
+
 16.08.2004
 - jabber ignore/unignore functionality (jabber/m-kobierzycki@debian.linux.org.pl)
 
