- reloading themes improved, but still don't know how to back to default style without restart (GUI/krzak) - some preferences improvements (GUI/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20.08.2004
+- reloading themes improved, but still don't know how to back to default style without restart (GUI/krzak)
+- some preferences improvements (GUI/krzak)
+
 19.08.2004
 - fixed prev button (gghist/krzak)
 - a little changes in preferences tabs (GUI/krzak)
