--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+21.08.2004
+- icons chooser moved to advanced tab (GUI/krzak)
+
 20.08.2004
 - reloading themes improved, but still don't know how to back to default style without restart (GUI/krzak)
 - some preferences improvements (GUI/krzak)
