--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 21.08.2004
-- icons chooser moved to advanced tab (GUI/krzak)
+- icons chooser moved to advanced tab, and other (GUI/krzak)
+- tlen-3d icons set as default, current tlen icons set as tlen-classic (core/krzak)
 
 20.08.2004
 - reloading themes improved, but still don't know how to back to default style without restart (GUI/krzak)
