--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
+22.08.2004
+- tlen-3d icons set as default, current tlen icons set as tlen-classic (core/krzak)
+- close bug #76 http://bugs.gnugadu.org/?do=details&id=67 (gadu-gadu/krzak)
+
 21.08.2004
 - icons chooser moved to advanced tab, and other (GUI/krzak)
-- tlen-3d icons set as default, current tlen icons set as tlen-classic (core/krzak)
 
 20.08.2004
 - reloading themes improved, but still don't know how to back to default style without restart (GUI/krzak)
