- fix show/hide toolbar (GUI/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+24.08.2004
+- fix show/hide toolbar (GUI/krzak)
+
 23.08.2004
 - 2.0.5.1 bugfix release - now jabber plugin compile and work with pre/post loudmouth 0.16
 
