--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - fix show/hide toolbar (GUI/krzak)
 - Editing own vcard implemented. (jabber/mkobierzycki)
 - aRts! plugin start use artsc, need libaudiofile since now. (arts/krzak)
+- aRts! plugin compilation enabled by default
 
 23.08.2004
 - 2.0.5.1 bugfix release - now jabber plugin compile and work with pre/post loudmouth 0.16
