--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-07.09.2004 (aflinta)
+07.09.2004 
 - Updated po/pl.po translation. If anyone is creating GUI, please remeber to:
   1) Use Capital Letter For Every Word In Window Title!
   2) Use ":" for ending labels of input fields
   3) It will be good idea to add underscores for every option in config dialogs,
      so user will be able to change them using keyboard, not only fucking mouse
   4) Does any one heard about HiG?
+  (aflinta)
 - small fixes (krzak)
 - fixed multiline messages in history engine (krzak)
 - release 2.0.6
