--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+10.09.2004
+- gg2.png remastered by Rafa³ Glazar <rafal_glazar@o2.pl>
+
 07.09.2004
 - Updated po/pl.po translation. If anyone is creating GUI, please remeber to:
   1) Use Capital Letter For Every Word In Window Title!
