- Implemented probing software version (JEP-0092) (mkobierzycki/jabber)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+12.09.2004
+- Implemented probing software version (JEP-0092) (mkobierzycki/jabber)
+
 10.09.2004
 - gg2.png remastered by Rafa³ Glazar <rafal_glazar@o2.pl>
 
