--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+17.09.2004
+- option to create dialog boxes with OK button only (mkobierzycki)
+
 16.09.2004
 - fixes of configuration options used with included libgadu (krzak)
 
