--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+21.09.2004
+- dlerror() - clear error messages after dlopen (piotr.smyrak@heron.pl)
+
 17.09.2004
 - option to create dialog boxes with OK button only (mkobierzycki)
 - Updated handling dialogs; Small fix. (mkobierzycki)
