--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+23.09.2004
+- rewriten sound-oss plugin (krzak/oss)
+
 21.09.2004
 - dlerror() - clear error messages after dlopen (piotr.smyrak@heron.pl)
 
@@ -830,27 +833,27 @@
 - autoconnect status box (gadu-gadu/krzak)
 - fixed paste emoticon tag choosed from window (GUI/krzak)
 
-9.04.2003
+09.04.2003
 - initial commit of ICQ plugin & lib - very alpha, limited functionalicy (icq/THrull)
 
-8.04.2003
+08.04.2003
 - rewriten chat window creation, still sux but less (GUI/krzak)
 
-7.04.2003
+07.04.2003
 - add documentation (docs/zapal)
 - sync eggtrayicon.c with libegg repository (docklet/krzak)
 
-6.04.2003
+06.04.2003
 - one little segfault fixed, one small code cleanup (sms/shasta)
 - fixes in jabber plugin, confirmations added (jabber/krzak)
 - subscription icon and support (jabber/krzak).
 
-4.04.2003
+04.04.2003
 - modification of dialogs and response result method (core/most plugins/THrull)
 - gg2sms contacts converter in /contrib (krzak)
 - Alignment/position of XOSD box are configurable now (xosd/shasta)
 
-3.04.2003
+03.04.2003
 - it's possible get cancel response from dialog (d->callback_cancel_signal) and GGADU_DIALOG_YES_NO type added (core/GUI/krzak)
 - replace images with gtk stock images :) (GUI/krzak)
 - load plugins in order in which they are listed in modules.load file (core/zapal)
@@ -862,12 +865,12 @@
 - fix for IDEA (sms/HelDoRe)
 - automatically show chat window (optional) (GUI/zapal)
 
-2.04.2003
+02.04.2003
 - fix "reason" variable encoding (gadu-gadu/krzak)
 - fixed removal of protocols upon unregistering (GUI/zapal)
 - free memory used by menus in destroy_plugin (gadu-gadu/jabber/tlen/sms/remote/xosd/zapal)
 
-1.04.2003
+01.04.2003
 - add VAR_LIST variable type (core/gui/THrull)
 - checkboxes in dialogs are now more GNOME HIG (gui/THrull)
 - we don't need change icon signal anymore (tlen/gui/THrull)
