- chat window change icon to notify about new message (GUI/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+08.10.2004
+- chat window change icon to notify about new message (GUI/krzak)
+
 29.09.2004
 - g_strcasecmp is deprecated and should not be used in newly-written code. 
   Replaced with ggadu_strcasecmp() (krzak)
