--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 13.10.2004
 - try to reconnect jabber connection three times before disconnect (jabber/krzak)
+- close bug #85 using g_filename_to_utf8 (sound plugins/krzak)
 
 08.10.2004
 - chat window change icon to notify about new message (GUI/krzak)
@@ -18,7 +19,7 @@
 - fixed lib/ggadu_conf.c/ggadu_config_var_set() with g_strstrip() not called with NULL argument.
   Close bug #82 thanks Marcin Grzeskowiak.
 - check for messages handlers before unregister them.
-  suggested by Michael Hallendal (micke@imendio.com)
+  suggested by Michael Hallendal (micke@imendio.com) (jabber)
 
 24.09.2004
 - "remote" plugin do not build by default anymore
