--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 13.10.2004
 - try to reconnect jabber connection three times before disconnect (jabber/krzak)
 - close bug #85 using g_filename_to_utf8 (sound plugins/krzak)
+- close bug #24 - update label with description (GUI/krzak)
 
 08.10.2004
 - chat window change icon to notify about new message (GUI/krzak)
