--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 15.10.2004
 - fixed registration procedure, close #86 (gadu-gadu/krzak)
+- use GtkFileChooser instead deprecated GtkFileSelection (GUI/krzak)
 
 13.10.2004
 - try to reconnect jabber connection three times before disconnect (jabber/krzak)
