--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - fixed registration procedure, close #86 (gadu-gadu/krzak)
 - use GtkFileChooser instead deprecated GtkFileSelection (GUI/krzak)
 - sound plugins fixes.. more messages about errors (sound-*/krzak)
+- use GtkColorButton for color selection (GUI/krzak)
 
 13.10.2004
 - try to reconnect jabber connection three times before disconnect (jabber/krzak)
