--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 - use GtkFileChooser instead deprecated GtkFileSelection (GUI/krzak)
 - sound plugins fixes.. more messages about errors (sound-*/krzak)
 - use GtkColorButton for color selection (GUI/krzak)
+- "get current status" signal now return GGaduSignalPrototype value instead just status id. (krzak)
 
 13.10.2004
 - try to reconnect jabber connection three times before disconnect (jabber/krzak)
