--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+18.10.2004
+- fix showing windows with new messages if docklet plugin isn't loaded (krzak/GUI)
+
 15.10.2004
 - fixed registration procedure, close #86 (gadu-gadu/krzak)
 - use GtkFileChooser instead deprecated GtkFileSelection (GUI/krzak)
