--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+19.10.2004
+- close #87, improved open chat windows (GUI/krzak)
+
 18.10.2004
 - fix showing windows with new messages if docklet plugin isn't loaded (krzak/GUI)
 - do not load modules with the same prefix ex. multiple sound-* plugins, just load
