--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 19.10.2004
-- close #87, improved open chat windows (GUI/krzak)
+- close #87, improved "open chat window" action (GUI/krzak)
 
 18.10.2004
 - fix showing windows with new messages if docklet plugin isn't loaded (krzak/GUI)
