--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 19.10.2004
 - close #87, improved "open chat window" action (GUI/krzak)
+- close #49, descriptions are now rendered, cosmetics (GUI/THrull)
 
 18.10.2004
 - fix showing windows with new messages if docklet plugin isn't loaded (krzak/GUI)
