--- a/po/gg2.pot
+++ b/po/gg2.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: http://www.gadu.gnu.pl/\n"
+"Report-Msgid-Bugs-To: http://www.gnugadu.org/\n"
 "POT-Creation-Date: 2004-09-07 17:04+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
