--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,11 @@
+read REAME file for requirements
+
 ./configure --help
 
 # if you want to *try* build *all* plugins
 ./configure --with-all-plugins 
+or
+./configure --without-gtkspell --without-tlen etc.... check (--help for details)
 
 make
 make install
