--- a/README
+++ b/README
@@ -7,7 +7,7 @@ To compile all plugins you need:
 
 - glib 2.2.0 (http://www.gtk.org)
 - gtk+ 2.4.0 (http://www.gtk.org) - GUI
-- libtlen (http://www.libtlen.eu.org) - Tlen
+- libtlen (http://libtlen.sourceforge.net) - Tlen
 - Loudmouth 0.17 or newer (http://www.imendio.com/projects/loudmouth) - Jabber
 - xosd (http://ignavus.net/software.html) - XOSD
 - esound (http://www.tux.org/~ricdude/EsounD.html - sound-esd
