--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 - default font set to -*-*-*-r-*-*-20-*-*-*-*-*-iso8859-2
   default color set to #67FF40,  suggested by misior  (xosd/krzak)
 - animated icon in docklet (docklet/krzak)
+- update pl translation (aflinta)
+- release 2.2.0
 
 19.10.2004
 - close #87, improved "open chat window" action (GUI/krzak)
