- escape string config variables (core/krzak)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 22.10.2004
 - close chat window on ESC option (mkobierzycki/GUI)
 - fixed reading malformed userlist (gadu-gadu/krzak)
+- escape string config variables (core/krzak)
 
 20.10.2004
 - default font set to -*-*-*-r-*-*-20-*-*-*-*-*-iso8859-2
