--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+25.10.2004
+- initial DBUS plugin
+
 22.10.2004
 - close chat window on ESC option (mkobierzycki/GUI)
 - fixed reading malformed userlist (gadu-gadu/krzak)
