--- a/src/plugins/dbus/README
+++ b/src/plugins/dbus/README
@@ -16,4 +16,24 @@ if test -z "$DBUS_SESSION_BUS_ADDRESS" ; then
   eval `dbus-launch --sh-syntax --exit-with-session`
   echo "D-BUS per-session daemon address is: $DBUS_SESSION_BUS_ADDRESS"
 fi
-			       
+
+
+#####
+
+Protocols handlers:
+
+Tlen.pl		tlen://
+Gadu-Gadu	gg://
+Jabber		jabber://
+AIM		aim://
+ICQ		icq://
+
+#####
+Interface
+
+[
+org.freedesktop.im.getProtocols
+    
+    return strings with supported protocols list example: gg:// jabber:// icq://
+]
+[
