- dbus plugin handle methods   org.freedesktop.im.getPresence   org.freedesktop.im.getProtocols   (krzak/thrull/dbus) - GGaduProtocol->protocol_handler_str (krzak)   /* gg:// tlen:// jabber:// */

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+29.10.2004
+- dbus plugin handle methods
+  org.freedesktop.im.getPresence
+  org.freedesktop.im.getProtocols
+  (krzak/thrull/dbus)
+- GGaduProtocol->protocol_handler_str (krzak)
+  /* gg:// tlen:// jabber:// */ 
+
 26.10.2004
 - fix exit if set unavailable in jabber plugin (krzak/jabber)
 - update pl translation (THrull)
