--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
   (gg:// tlen:// jabber://)
 - introduced new signal "get user" -  should return GGaduContact (krzak)
 - added GGaduContact_copy() (krzak)
+- GGaduConfig->plugins  to GGaduConfig->loaded_plugins
 
 26.10.2004
 - fix exit if set unavailable in jabber plugin (krzak/jabber)
