- "get user" implemented in gadu-gadu, tlen, jabber - remember to set plugin_handler->protocol = protocol - DBUS getPresence working fine :)

--- a/src/plugins/dbus/README
+++ b/src/plugins/dbus/README
@@ -40,13 +40,17 @@ EMAIL		email://
 [org.freedesktop.im.getPresence( contactURI )]
     example: jabber://krzak@jabberpl.org
     
-    RETURN: (DBUS_TYPE_UINT32 DBusIMPresence,DBUS_TYPE_STRING icon_path)
+    RETURN: (DBUS_TYPE_UINT32 DBusIMPresence,
+	     DBUS_TYPE_STRING status_description,
+	     DBUS_TYPE_STRING icon_path)
     
 	typedef enum
 	{
-	    IM_PRESENCE_ONLINE = 1,
+	    IM_PRESENCE_NOT_FOUND = 1
+	    IM_PRESENCE_AVAILABLE,
 	    IM_PRESENCE_AWAY,
 	    IM_PRESENCE_OFFLINE
 	} DBusIMPresence;
 	
-	icon_path - path to icon of this presence (optional, may be NULL)
+	status_description - may be empty string "" [not NULL]
+	icon_path - path to icon of this presence (optional, may be empty string "" [not NULL])
