--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 28.10.2004
+- s/protocol_handler_str/protocol_uri/g (THrull)
 - dbus plugin handle methods
   org.freedesktop.im.getPresence
   org.freedesktop.im.getProtocols
